Responsive and Alignment fixes

--- a/Frontend/src/components/Header/index.scss
+++ b/Frontend/src/components/Header/index.scss
@@ -124,7 +124,7 @@
         @include breakpoint(md){
           margin: 0;
           padding: 6px;
-          font-size: $f14;
+          font-size: $f13;
         }
       }
 
