--- a/Frontend/src/pages/Home/allMachinery/index.scss
+++ b/Frontend/src/pages/Home/allMachinery/index.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     background-color: #f5f5f5;
     width: 100%;
-    height: 584px;
+    padding-bottom: 40px;
 
 
     @media screen and (max-width: 500px) {
